<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Number Systems</string>
    <string name="dec">Decimal (10)</string>
    <string name="bin">Binary (2)</string>
    <string name="oct">Octal (8)</string>
    <string name="hex">Hexadecimal (16)</string>
    <string name="Converter">Converter</string>
    <string name="Calculator">Calculator</string>
    <string name="result">Result</string>
    <string name="operand_2">Operand 2</string>
    <string name="operand_1">Operand 1</string>
    <string name="invalid_value">Invalid value</string>
    <string name="available_characters_for_input">Available characters for input</string>

    <string name="explanation">Explanation</string>
    <string name="explanation_convert_to_decimal">Convert to decimal number system</string>
    <string name="explanation_perform_division">Perform the division column</string>
    <string name="explanation_reverse_result">Write the result in reverse order</string>
    <string name="explanation_convert_fractional">The fractional part of the number is multiplied by the radix of the new</string>
    <string name="explanation_convert_fractional_write_result">Write the result from top to bottom</string>
    <string name="explanation_convert_combine_decimal_fractional">Combine decimal and fractional parts to get the result</string>

    <string name="index" translatable="false">index</string>
    <string name="multiply_symb" translatable="false">×</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="battery_saver">Set by Battery Saver</string>
    <string name="system_default">System default</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="help_with_translate">Help with translation</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="radix">Radix (%d)</string>
    <string name="result_of_translate">Translation result</string>
    <string name="multiply_symbol" translatable="false">×</string>
    <string name="plus_symbol" translatable="false">+</string>
    <string name="minus_symbol" translatable="false">-</string>
    <string name="div_symbol" translatable="false">÷</string>
    <string name="equal_symbol" translatable="false">=</string>
    <string name="dec_length_text">The number of characters after the decimal point</string>
    <string name="add_decimal">Add the integers and fractional parts</string>
    <string name="choose_theme">Theme</string>
    <string name="other">Other</string>
    <string name="copied">Copied</string>

    <string name="review">Rate app and review</string>
    <string name="ad">Ad</string>
    <string name="adWatch">watch ad</string>
    <string name="adMessage">Hi!\nWe really didn\'t want to add ads, but we need financial support. So you can watch ads or opt out.\nThanks for the attention!</string>
</resources>
