<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="comma" type="String"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".SettingsFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsTheme"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/chooseTheme"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/brightness"
                    app:iconTint="?attr/iconColor" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsLanguage"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/language"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/language"
                    app:iconTint="?attr/iconColor" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsComma"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{comma}"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/linear"
                    app:iconTint="?attr/iconColor" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsTranslate"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/help_with_translate"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/translate"
                    app:iconTint="?attr/iconColor" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsGitHub"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/github"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/github"
                    app:iconTint="?attr/iconColor" />


            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>
</layout>