<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConverterFragment">

    <ScrollView
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:clickable="false"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="138dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout10"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                ads:errorEnabled="true"
                ads:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/dec"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                ads:errorEnabled="true"
                ads:hintAnimationEnabled="true"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="01"
                    android:hint="@string/bin"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                ads:errorEnabled="true"
                ads:hintAnimationEnabled="true"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="01234567"
                    android:hint="@string/oct"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout16"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                ads:errorEnabled="true"
                ads:hintAnimationEnabled="true"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:digits="0123456789ABCDEFabcdef"
                    android:hint="@string/hex"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:singleLine="true"
                    android:textAllCaps="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCustom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                ads:errorEnabled="true"
                ads:hintAnimationEnabled="true"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@id/textInputLayout16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnoprstuvwxyz"
                    android:hint="@string/freeValue"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:paddingEnd="100dp"
                    android:singleLine="true"
                    android:textAllCaps="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                ads:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCustom"
                ads:layout_constraintEnd_toEndOf="@+id/textInputLayoutCustom"
                ads:layout_constraintTop_toTopOf="@+id/textInputLayoutCustom" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>