<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="66dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCustom1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVal1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnoprstuvwxyz"
                    android:hint="@string/operand_1"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:importantForAutofill="no"
                    android:includeFontPadding="true"
                    android:inputType="textNoSuggestions"
                    android:paddingEnd="90dp"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCustom1"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutCustom1"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutCustom1" />

            <LinearLayout
                android:id="@+id/linearRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCustom1">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:checked="true"
                        android:text="+"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioButtonMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:text="−"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioButtonMult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:text="×"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioButtonDiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"
                        android:text="÷"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCustom2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearRadioGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVal2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnoprstuvwxyz"
                    android:hint="@string/operand_2"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:includeFontPadding="true"
                    android:inputType="textNoSuggestions"
                    android:paddingEnd="90dp"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCustom2"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutCustom2"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutCustom2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutResult"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCustom2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/result"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnoprstuvwxyz"
                    android:imeOptions="actionDone|flagNoFullscreen"
                    android:paddingEnd="90dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textIsSelectable="true"
                    tools:ignore="RtlSymmetry"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutResult"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutResult"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutResult" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>